Fixes and Tests